package dhbw.ipoat.animals;

public interface AnimalImplementation {
    void MakeAnimalSound(String sound);
}
