@startuml
class dhbw.ipoat.animals.AudioSoundGenerator {
+ void MakeAnimalSound(String)
}
abstract class dhbw.ipoat.animals.mammals.Mammal {
- Backpack backpack
# Employee rider
+ Backpack getBackpack()
+ {static} boolean doesThisAnimalExist(String)
}
class dhbw.ipoat.animals.mammals.Ox {
+ void MakeSound()
}

class dhbw.ipoat.animals.Animal {
# int age
# int maxAge
# int speed
# int energy
# int cost
# String name
# String type
# boolean home
# boolean delivering
# float maxWeight
# Player player
# float deathProbability
# float percentageMoved
# TransportDevice device
# boolean gender
# int breedingCooldown
# HabitatTypes habitatType
+ boolean isDelivering()
+ HabitatTypes getHabitatType()
+ int getMaxAge()
+ void setBreedingCooldown(int)
+ int getBreedingCooldown()
+ TransportDevice getDevice()
+ int getSpeed()
+ void setDevice(TransportDevice)
+ void agingAnimal()
+ String getName()
+ void killAnimal()
- boolean checkForAttachedTransport()
+ boolean isGender()
+ void moveAnimal()
+ float calculateValueOfAnimal()
+ void setHome(boolean)
+ float getDeathProbability()
+ int getCost()
+ String getTypeOfAnimal()
+ boolean isHome()
+ int getAge()
+ int getEnergy()
+ float getMaxWeight()
+ void setEnergy(int)
}

abstract class dhbw.ipoat.animals.GrownAnimals {
# int cost
# boolean home
# boolean delivering
# int breedingCooldown
# TransportDevice transport
# AnimalImplementation animalImplementation
+ {abstract}void MakeSound()
+ TransportDevice getTransport()
+ AnimalImplementation getAnimalImplementation()
+ void setAnimalImplementation(AnimalImplementation)
}
interface dhbw.ipoat.animals.AnimalImplementation {
~ void MakeAnimalSound(String)
}
class dhbw.ipoat.animals.ConsoleSoundGenerator {
+ void MakeAnimalSound(String)
}
class dhbw.ipoat.animals.mammals.Horse {
+ void MakeSound()
}

class dhbw.ipoat.animals.mammals.Elephant {
+ void MakeSound()
}


dhbw.ipoat.animals.AnimalImplementation <|.. dhbw.ipoat.animals.AudioSoundGenerator
dhbw.ipoat.animals.GrownAnimals <|-- dhbw.ipoat.animals.mammals.Mammal
dhbw.ipoat.animals.mammals.Mammal <|-- dhbw.ipoat.animals.mammals.Ox
dhbw.ipoat.animals.Animal <|-- dhbw.ipoat.animals.GrownAnimals
dhbw.ipoat.animals.AnimalImplementation <|.. dhbw.ipoat.animals.ConsoleSoundGenerator
dhbw.ipoat.animals.mammals.Mammal <|-- dhbw.ipoat.animals.mammals.Horse
dhbw.ipoat.animals.mammals.Mammal <|-- dhbw.ipoat.animals.mammals.Elephant
@enduml